--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,7 @@
     <string name="nc_search">Search</string>
 
     <string name="nc_certificate_dialog_title">Trust the certificate?</string>
-    <string name="nc_certificate_dialog_text">We encountered an SSL certificate issued by %1$s for %2$s and valid
-        from %3$s to %4$s. Trust it?</string>
+    <string name="nc_certificate_dialog_text">We encountered an SSL certificate issued by %1$s for %2$s valid from %3$s to %4$s. Trust it?</string>
     <string name="nc_yes">Yes</string>
     <string name="nc_no">No</string>
     <string name="nc_details">Details</string>
