--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="nc_get_source_code">Get source code</string>
     <string name="nc_license_title">License</string>
     <string name="nc_license_summary">GNU General Public License, Version 3</string>
+
+    <string name="nc_select_an_account">Select an account</string>
 </resources>
