--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="nc_settings_add_account">Add a new account</string>
     <string name="nc_settings_wrong_account">Only current account can be reauthorized</string>
     <string name="nc_settings_account_updated">We updated your existing account instead of adding a new one since it already exists</string>
+    <string name="nc_account_scheduled_for_deletion">Account is scheduled for deletion, and cannot be operated on</string>
 
     <string name="nc_no_proxy">No proxy</string>
     <string name="nc_username">Username</string>
