--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="nc_display_name_stored">Display name stored</string>
     <string name="nc_display_name_not_stored">Display name not stored, aborting</string>
 
-    <string name="nc_never">Never</string>
+    <string name="nc_never">Never joined</string>
     <string name="nc_search">Search</string>
 
     <string name="nc_certificate_dialog_title">Check out the certificate</string>
