--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,16 @@
     <string name="nc_license_summary">GNU General Public License, Version 3</string>
 
     <string name="nc_select_an_account">Select an account</string>
+
+    <!-- Room menu -->
+    <string name="nc_what">What would you like to do?</string>
+    <string name="nc_leave">Leave call</string>
+    <string name="nc_rename">Rename call</string>
+    <string name="nc_set_password">Set the password</string>
+    <string name="nc_change_password">Change the password</string>
+    <string name="nc_share_link">Share link</string>
+    <string name="nc_make_call_public">Make call public</string>
+    <string name="nc_stop_sharing">Stop sharing the call</string>
+    <string name="nc_delete_call">Delete call</string>
+
 </resources>
