--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="nc_select_an_account">Select an account</string>
 
     <!-- Room menu -->
-    <string name="nc_what">What would you like to do?</string>
+    <string name="nc_what">What would you like to do today?</string>
     <string name="nc_leave">Leave call</string>
     <string name="nc_rename">Rename call</string>
     <string name="nc_set_password">Set the password</string>
