--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,11 @@
     <string name="nc_one_contact_selected">contact selected</string>
     <string name="nc_more_contacts_selected">contacts selected</string>
 
+    <!-- Permissions -->
+    <string name="nc_permissions">We need certain permissions to establish a video call. Please click \"ALLOW\" in
+        the upcoming system dialog.</string>
+    <string name="nc_permissions_permanently_denied">We need certain permissions to establish a video call. Please
+        grant the \"Camera\" and  \"Record audio\" permission in system settings.</string>
+    <string name="nc_permissions_settings">Open settings</string>
 
 </resources>
