--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,8 +80,7 @@
     <!-- Permissions -->
     <string name="nc_permissions">Permissions may need to be granted to establish a video call. Please click \"ALLOW\" in
         the upcoming system dialog.</string>
-    <string name="nc_permissions_permanently_denied">To establish a video call,
-        grant \"Camera\" and  \"Microphone\" permissions in system settings.</string>
+    <string name="nc_permissions_permanently_denied">To make video calls, grant \"Camera\" and \"Microphone\" permissions in the system settings.</string>
     <string name="nc_permissions_settings">Open settings</string>
 
 </resources>
