Set ringtone as sound for one-to-one calls
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,7 @@
         permission in the system settings.</string>
     <string name="nc_permissions_settings">Open settings</string>
 
+    <!-- Call -->
+    <string name="nc_incoming_call">Incoming call</string>
+
 </resources>
