--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="nc_server_db_upgrade_needed">Please upgrade your %1$s database</string>
     <string name="nc_server_maintenance">Please bring your %1$s out of maintenance</string>
     <string name="nc_server_version">%1$s only works with %2$s 13 and up</string>
+    <string name="nc_server_import_accounts_plain_singular">Import account</string>
+    <string name="nc_server_import_accounts_plain_plural">Import accounts</string>
+    <string name="nc_server_import_accounts">Import accounts from the %1$s app</string>
+    <string name="nc_server_import_account_notification">Please grant access to the selected account in the notification bar!"</string>
     <string name="nc_get_from_provider">Do you not have a server yet?\nClick here to get one from a provider</string>
 
     <!-- Account verification -->
