--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,11 @@
     <!-- Call -->
     <string name="nc_incoming_call">Incoming call</string>
 
+    <!-- Notification channels -->
+    <string name="nc_notification_channel">%1$s on %2$s notification channel</string>
+    <string name="nc_notification_channel_calls">Calls notification channel</string>
+    <string name="nc_notification_channel_messages">Messages notification channel</string>
+    <string name="nc_notification_channel_calls_description">Shows incoming calls</string>
+    <string name="nc_notification_channel_messages_description">Shows incoming messages</string>
+
 </resources>
