Start working on #40
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values-b+en+001/strings.xml
+++ b/app/src/main/res/values-b+en+001/strings.xml
@@ -76,7 +76,7 @@
     <string name="nc_change_password">Change the password</string>
     <string name="nc_share_link">Share link</string>
     <string name="nc_make_call_public">Make call public</string>
-    <string name="nc_stop_sharing">Stop sharing the call</string>
+    <string name="nc_make_call_private">Stop sharing the call</string>
     <string name="nc_delete_call">Delete call</string>
 
     <!-- Contacts -->
