--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -55,7 +55,7 @@
     <string name="nc_change_password">Skift kodeord</string>
     <string name="nc_share_link">Del link</string>
     <string name="nc_make_call_public">Lav et offentligt opkald</string>
-    <string name="nc_stop_sharing">Stop deling af opkald</string>
+    <string name="nc_make_call_private">Stop deling af opkald</string>
     <string name="nc_delete_call">Slet opkald</string>
 
     <!-- Contacts -->
