--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -77,7 +77,7 @@ Kies er eentje van een provider.</string>
     <string name="nc_change_password">Wijzig wachtwoord</string>
     <string name="nc_share_link">Deel link</string>
     <string name="nc_make_call_public">Maak gesprek openbaar</string>
-    <string name="nc_stop_sharing">Stop delen van het gesprek</string>
+    <string name="nc_make_call_private">Stop delen van het gesprek</string>
     <string name="nc_delete_call">Verwijder gesprek</string>
 
     <!-- Contacts -->
