--- a/app/src/main/res/values-es-rPE/strings.xml
+++ b/app/src/main/res/values-es-rPE/strings.xml
@@ -65,7 +65,7 @@
     <string name="nc_change_password">Cambiar la contraseña</string>
     <string name="nc_share_link">Compartir liga</string>
     <string name="nc_make_call_public">Generar una llamada pública</string>
-    <string name="nc_stop_sharing">Dejar de compartir la llamada</string>
+    <string name="nc_make_call_private">Dejar de compartir la llamada</string>
     <string name="nc_delete_call">Borrar la llamada</string>
 
     <!-- Contacts -->
