--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -76,7 +76,7 @@
     <string name="nc_change_password">Changer le mot de passe</string>
     <string name="nc_share_link">Partager par lien public</string>
     <string name="nc_make_call_public">Effectuer un appel public</string>
-    <string name="nc_stop_sharing">Arrêter de partager l‘appel</string>
+    <string name="nc_make_call_private">Arrêter de partager l‘appel</string>
     <string name="nc_delete_call">Supprimer l’appel</string>
 
     <!-- Contacts -->
