--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -68,7 +68,7 @@
     <string name="nc_change_password">Ndrysho fjalëkalimin</string>
     <string name="nc_share_link">Ndaj linkun</string>
     <string name="nc_make_call_public">Bëje thirrjen publike</string>
-    <string name="nc_stop_sharing">Ndalo së ndari thirrjen</string>
+    <string name="nc_make_call_private">Ndalo së ndari thirrjen</string>
     <string name="nc_delete_call">Fshi thirrjen</string>
 
     <!-- Contacts -->
