--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="nc_change_password">Change the password</string>
     <string name="nc_share_link">Share link</string>
     <string name="nc_make_call_public">Make call public</string>
-    <string name="nc_stop_sharing">Stop sharing the call</string>
+    <string name="nc_make_call_private">Make call private</string>
     <string name="nc_delete_call">Delete call</string>
 
     <!-- Contacts -->
@@ -100,5 +100,10 @@
     <string name="nc_notification_channel_messages">Messages notification channel</string>
     <string name="nc_notification_channel_calls_description">Shows incoming calls</string>
     <string name="nc_notification_channel_messages_description">Shows incoming messages</string>
+
+    <!-- Bottom sheet menu -->
+    <string name="nc_failed_to_perform_operation">Sorry, something went wrong!</string>
+    <string name="nc_all_ok_operation">OK, all done!</string>
+    <string name="nc_ok">OK</string>
 
 </resources>
