--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,8 +72,8 @@
     <string name="nc_what">What would you like to do today?</string>
     <string name="nc_leave">Leave call</string>
     <string name="nc_rename">Rename call</string>
-    <string name="nc_set_password">Set the password</string>
-    <string name="nc_change_password">Change the password</string>
+    <string name="nc_set_password">Set a password</string>
+    <string name="nc_change_password">Change a password</string>
     <string name="nc_share_link">Share link</string>
     <string name="nc_make_call_public">Make call public</string>
     <string name="nc_make_call_private">Make call private</string>
