--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="nc_no_proxy">No proxy</string>
     <string name="nc_username">Username</string>
     <string name="nc_password">Password</string>
+    <string name="nc_new_password">New password</string>
     <string name="nc_about">About</string>
     <string name="nc_privacy">Privacy</string>
     <string name="nc_get_source_code">Get source code</string>
@@ -74,6 +75,7 @@
     <string name="nc_rename">Rename call</string>
     <string name="nc_set_password">Set a password</string>
     <string name="nc_change_password">Change a password</string>
+    <string name="nc_clear_password">Clear password</string>
     <string name="nc_share_link">Share link</string>
     <string name="nc_make_call_public">Make call public</string>
     <string name="nc_make_call_private">Make call private</string>
@@ -105,5 +107,8 @@
     <string name="nc_failed_to_perform_operation">Sorry, something went wrong!</string>
     <string name="nc_all_ok_operation">OK, all done!</string>
     <string name="nc_ok">OK</string>
+    <string name="nc_call_name">Call name</string>
+    <string name="nc_proceed">Proceed</string>
+    <string name="nc_call_name_is_same">The name you entered is the same as the existing one</string>
 
 </resources>
