--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="nc_change_password">Change a password</string>
     <string name="nc_clear_password">Clear password</string>
     <string name="nc_share_link">Share link</string>
+    <string name="nc_share_link_via">Share link via</string>
     <string name="nc_make_call_public">Make call public</string>
     <string name="nc_make_call_private">Make call private</string>
     <string name="nc_delete_call">Delete call</string>
@@ -110,5 +111,9 @@
     <string name="nc_call_name">Call name</string>
     <string name="nc_proceed">Proceed</string>
     <string name="nc_call_name_is_same">The name you entered is the same as the existing one</string>
-
+    <string name="nc_share_text">Hello,\n\nI would like you to join a call with me.\n\nYou can join this call via
+        %1$s/index.php/call/%2$s</string>
+    <string name="nc_talk_soon">\n\nTalk soon,\n %1$s</string>
+    <string name="nc_share_subject">Call invitation</string>
+    <string name="nc_share_text_pass">\n\nPassword for the call is: %1$s</string>
 </resources>
