--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="nc_username">Username</string>
     <string name="nc_password">Password</string>
     <string name="nc_new_password">New password</string>
+    <string name="nc_wrong_password">Wrong password</string>
     <string name="nc_about">About</string>
     <string name="nc_privacy">Privacy</string>
     <string name="nc_get_source_code">Get source code</string>
