--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <string name="nc_never">Never joined</string>
     <string name="nc_search">Search</string>
+    <string name="nc_new_conversation">Create a new conversation</string>
 
     <string name="nc_certificate_dialog_title">Check out the certificate</string>
     <string name="nc_certificate_dialog_text">Do you trust the until now unknown SSL certificate, issued by %1$s for %2$s, valid from %3$s to %4$s?</string>
@@ -84,8 +85,11 @@
     <string name="nc_delete_call">Delete call</string>
 
     <!-- Contacts -->
+    <string name="nc_select_contacts">Select contacts</string>
     <string name="nc_one_contact_selected">contact selected</string>
     <string name="nc_more_contacts_selected">contacts selected</string>
+    <string name="nc_contacts_clear">Clear</string>
+    <string name="nc_contacts_done">Done</string>
 
     <!-- Permissions -->
     <string name="nc_permissions">Permissions need to be granted to establish a video and/or audio call. Please click \"ALLOW\" in the upcoming system dialog.</string>
