--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,7 @@
     <string name="nc_talk_soon">\n\nTalk soon,\n %1$s</string>
     <string name="nc_share_subject">Call invitation</string>
     <string name="nc_share_text_pass">\n\nPassword for the call is: %1$s</string>
+
+    <!-- Magical stuff -->
+    <string name="nc_empty"></string>
 </resources>
