--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,11 +126,9 @@
     <string name="nc_proceed">Proceed</string>
     <string name="nc_call_name_is_same">The name you entered is the same as the existing one</string>
     <string name="nc_wrong_link">Conversation link is not valid</string>
-    <string name="nc_share_text">Hello,\n\nI would like you to join a call with me.\n\nYou can join this call via
-        %1$s/index.php/call/%2$s</string>
-    <string name="nc_talk_soon">\n\nTalk soon,\n %1$s</string>
-    <string name="nc_share_subject">Call invitation</string>
-    <string name="nc_share_text_pass">\n\nPassword for the call is: %1$s</string>
+    <string name="nc_share_text">Join the conversation at %1$s/index.php/call/%2$s</string>
+    <string name="nc_share_subject">%1$s invitation</string>
+    <string name="nc_share_text_pass">\nPassword: %1$s</string>
 
     <!-- Magical stuff -->
     <string name="nc_empty"></string>
