--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,5 +164,10 @@ Millions of users use Nextcloud daily at businesses and homes around the world. 
 Learn more on https://nextcloud.com/talk
 
 Find Nextcloud on https://nextcloud.com</string>
-    <string name="hint_enter_a_message">Enter a message…</string>
+
+    <!-- Chat -->
+    <string name="nc_hint_enter_a_message">Enter a message…</string>
+    <string name="nc_date_header_yesterday">Yesterday</string>
+    <string name="nc_date_header_today">Today</string>
+
 </resources>
