--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,11 @@
     <string name="nc_settings_no_talk_installed">Talk app is not installed on the server you tried to authorize against</string>
     <string name="nc_settings_account_updated">Your already existing account was updated, instead of adding a new one</string>
     <string name="nc_account_scheduled_for_deletion">The account is scheduled for deletion, and cannot be changed</string>
+    <string name="nc_settings_notification_sounds">Notification sounds</string>
+    <string name="nc_settings_call_ringtone">Calls</string>
+    <string name="nc_settings_call_ringtone_key">call_ringtone</string>
+    <string name="nc_settings_message_ringtone">Messages</string>
+    <string name="nc_settings_message_ringtone_key">message_ringtone</string>
 
     <string name="nc_no_proxy">No proxy</string>
     <string name="nc_username">Username</string>
