--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,16 +40,16 @@
 
     <!-- Settings -->
     <string name="nc_settings_proxy_title">Proxy</string>
-    <string name="nc_settings_proxy_type_key">proxy_type</string>
+    <string name="nc_settings_proxy_type_key" translatable="false">proxy_type</string>
     <string name="nc_settings_proxy_type_title">Proxy type</string>
-    <string name="nc_settings_proxy_host_key">proxy_host</string>
+    <string name="nc_settings_proxy_host_key" translatable="false">proxy_host</string>
     <string name="nc_settings_proxy_host_title">Proxy host</string>
-    <string name="nc_settings_proxy_port_key">proxy_port</string>
+    <string name="nc_settings_proxy_port_key" translatable="false">proxy_port</string>
     <string name="nc_settings_proxy_port_title">Proxy port</string>
-    <string name="nc_settings_proxy_username_key">proxy_username</string>
-    <string name="nc_settings_proxy_password_key">proxy_password</string>
+    <string name="nc_settings_proxy_username_key" translatable="false">proxy_username</string>
+    <string name="nc_settings_proxy_password_key" translatable="false">proxy_password</string>
     <string name="nc_settings_use_credentials_title">Use credentials</string>
-    <string name="nc_settings_use_credentials_key">proxy_credentials</string>
+    <string name="nc_settings_use_credentials_key" translatable="false">proxy_credentials</string>
     <string name="nc_settings_switch_account">Switch between accounts</string>
     <string name="nc_settings_reauthorize">Reauthorize</string>
     <string name="nc_client_cert_setup">Set up client certificate</string>
@@ -62,9 +62,9 @@
     <string name="nc_account_scheduled_for_deletion">The account is scheduled for deletion, and cannot be changed</string>
     <string name="nc_settings_notification_sounds">Notification sounds</string>
     <string name="nc_settings_call_ringtone">Calls</string>
-    <string name="nc_settings_call_ringtone_key">call_ringtone</string>
+    <string name="nc_settings_call_ringtone_key" translatable="false">call_ringtone</string>
     <string name="nc_settings_message_ringtone">Messages</string>
-    <string name="nc_settings_message_ringtone_key">message_ringtone</string>
+    <string name="nc_settings_message_ringtone_key" translatable="false">message_ringtone</string>
     <string name="nc_settings_default_ringtone" translatable="false">Librem by feandesign</string>
     <string name="nc_settings_no_ringtone">No sound</string>
 
