--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,10 @@
     <string name="nc_settings_message_ringtone_key" translatable="false">message_ringtone</string>
     <string name="nc_settings_default_ringtone" translatable="false">Librem by feandesign</string>
     <string name="nc_settings_no_ringtone">No sound</string>
+    <string name="nc_settings_vibrate">Vibrate</string>
+    <string name="nc_settings_vibrate_desc">When enabled, phone will vibrate unless it\'s silenced</string>
+    <string name="nc_settings_vibrate_key" translatable="false">notifications_vibrate</string>
+
 
     <string name="nc_no_proxy">No proxy</string>
     <string name="nc_username">Username</string>
