--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -72,7 +72,7 @@
 
     <string name="nc_select_an_account">Konto auswählen</string>
 
-    <!-- Room menu -->
+    <!-- Conversation menu -->
     <string name="nc_start_conversation">Starte eine Unterhaltung</string>
     <string name="nc_configure_room">Unterhaltung einrichten</string>
     <string name="nc_leave">Unterhaltung verlassen</string>
