--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -72,7 +72,7 @@
 
     <string name="nc_select_an_account">Choisissez un compte</string>
 
-    <!-- Room menu -->
+    <!-- Conversation menu -->
     <string name="nc_start_conversation">Commencer une conversation</string>
     <string name="nc_configure_room">Configurer la conversation</string>
     <string name="nc_leave">Quitter la conversation</string>
