--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -67,7 +67,7 @@
 
     <string name="nc_select_an_account">Fiók kiválasztása</string>
 
-    <!-- Room menu -->
+    <!-- Conversation menu -->
     <string name="nc_start_conversation">Beszélgetés indítása</string>
     <string name="nc_configure_room">Beszélgetés beállításai</string>
     <string name="nc_leave">Kilépés a beszélgetésből</string>
