--- a/app/src/main/res/values-is/strings.xml
+++ b/app/src/main/res/values-is/strings.xml
@@ -66,7 +66,7 @@
 
     <string name="nc_select_an_account">Veldu aðgang</string>
 
-    <!-- Room menu -->
+    <!-- Conversation menu -->
     <string name="nc_start_conversation">Hefja samtal</string>
     <string name="nc_configure_room">Stilla samtal</string>
     <string name="nc_leave">Hætta í samtali</string>
