--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -72,7 +72,7 @@
 
     <string name="nc_select_an_account">Seleziona account</string>
 
-    <!-- Room menu -->
+    <!-- Conversation menu -->
     <string name="nc_start_conversation">Inizia una conversazione</string>
     <string name="nc_configure_room">Configura conversazione</string>
     <string name="nc_leave">Lascia la conversazione</string>
