--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -72,7 +72,7 @@
 
     <string name="nc_select_an_account">Selecionar uma conta</string>
 
-    <!-- Room menu -->
+    <!-- Conversation menu -->
     <string name="nc_start_conversation">Iniciar uma conversa</string>
     <string name="nc_configure_room">Configurar uma conversa</string>
     <string name="nc_leave">Sair da conversa</string>
